# CircularImageview

./: WORKSPACE  build.gradle
app/: build.gradle
circularimageview/: BUILD.bazel  build.gradle
circularimageview/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
