load("@rules_jvm_external//:defs.bzl", "artifact")

android_library(
    name = "circular_image_view",
    custom_package = "com.jackandphantom.circularimageview",
    srcs = glob(["src/main/java/**/*.java"]),
    resource_files = glob(["src/main/res/**"]),
    manifest = "src/main/AndroidManifest.xml",
    exports_manifest = True,
    deps = [
    #    artifact("androidx.appcompat:appcompat"),
    ],
    visibility = ["//visibility:public"],
)
